--- a/src/app/personnels/info-person/info.component.html
+++ b/src/app/personnels/info-person/info.component.html
@@ -1,7 +1,7 @@
 <div id="info-container">
-  <!--<div class="action-form mgb-40" >-->
-    <!--<button (click)="print()">Print</button>-->
-  <!--</div>-->
+  <div class="action-form mgb-40 text-right" >
+    <button (click)="print()"> <i class="fa fa-print" aria-hidden="true"></i> Print </button>
+  </div>
   <!--Sơ yếu lí lịch -->
   <div id="app-curriculum-vitae">
     <app-curriculum-vitae></app-curriculum-vitae>
