--- a/src/app/personnels/info-person/process-teaching/process-teaching.component.html
+++ b/src/app/personnels/info-person/process-teaching/process-teaching.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive" id="process-teaching-print">
       <table class="table table-bordered">
         <thead>
         <tr>
@@ -21,7 +21,7 @@
           <th>Đơn vị giảng dạy</th>
           <th>Năm bắt đầu giảng dạy</th>
           <th>Ngôn ngữ giảng dạy</th>
-          <th>
+          <th class="hide-print">
             <span class="action-icon" (click)="openModals();"><i class="fa fa-plus"></i></span>
           </th>
         </tr>
@@ -36,7 +36,7 @@
           <td>{{item.organTeaching}}</td>
           <td>{{item.yearTeaching}}</td>
           <td>{{nationalService.getNationalByCode(nationals,item.languageTeaching).name}}</td>
-          <td>
+          <td class="hide-print">
             <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
             <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
             <span class="action-icon"><i class="fa fa-lock"></i></span>
