--- a/src/app/personnels/info-person/publish-info/publish-info.component.html
+++ b/src/app/personnels/info-person/publish-info/publish-info.component.html
@@ -9,7 +9,7 @@
         {{message.content}}
       </div>
     </div>
-    <div class="table-responsive">
+    <div class="table-responsive" id="publish-info-print">
       <table class="table table-bordered">
         <thead>
         <tr>
@@ -18,7 +18,7 @@
           <th>Năm xuất bản</th>
           <th>Nhà xuất bản</th>
           <th>Vai trò</th>
-          <th>
+          <th class="hide-print">
             <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
           </th>
         </tr>
@@ -31,7 +31,7 @@
           <td>{{item.year}}</td>
           <td>{{item.publishCompany}}</td>
           <td>{{item.role}}</td>
-          <td>
+          <td class="hide-print">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
             <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
           </td>
