--- a/src/app/personnels/info-person/emulation-title/emulation-title.component.html
+++ b/src/app/personnels/info-person/emulation-title/emulation-title.component.html
@@ -7,15 +7,15 @@
         {{message.content}}
       </div>
     </div>
-    <div class="table-responsive">
-      <table class="table table-bordered">
+    <div class="table-responsive" id="emulation-title-print">
+      <table class="table table-bordered" >
         <thead>
         <tr>
           <th>STT</th>
           <th>Danh hiệu thi đua</th>
           <th>Ngày cấp</th>
           <th>Số quyết định</th>
-          <th>
+          <th class="hide-print">
             <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
           </th>
         </tr>
@@ -28,7 +28,7 @@
           <td>{{item.title}}</td>
           <td>{{item.dateLicense | date:'dd/MM/yyyy'}}</td>
           <td>{{item.numberDecide}}</td>
-          <td>
+          <td class="hide-print">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
             <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
             <!--<span class="action-icon" ><i class="fa fa-lock"></i></span>-->
