--- a/src/app/personnels/info-person/process-work/process-work.component.html
+++ b/src/app/personnels/info-person/process-work/process-work.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <div class="table-responsive">
+            <div class="table-responsive" id="process-work-print">
               <table class="table table-bordered">
                 <thead>
                 <tr>
@@ -24,7 +24,7 @@
                   <th>Đến ngày</th>
                   <th>Chức vụ</th>
                   <th>Công việc đảm nhận</th>
-                  <th>
+                  <th class="hide-print">
                     <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
                   </th>
                 </tr>
@@ -37,7 +37,7 @@
                   <td>{{item.dateEnd | date:'dd/MM/yyyy'}}</td>
                   <td>{{item.position}}</td>
                   <td>{{item.job}}</td>
-                  <td>
+                  <td class="hide-print">
                     <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
                     <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
                   </td>
@@ -157,5 +157,6 @@
   </modal-footer>
 
 </modal>
+
 
 
