--- a/src/app/personnels/info-person/science-topic/science-topic.component.html
+++ b/src/app/personnels/info-person/science-topic/science-topic.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <div class="table-responsive">
+        <div class="table-responsive" id="sciece-topic-print">
           <table class="table table-bordered">
             <thead>
             <tr>
@@ -24,7 +24,7 @@
               <th>Vai trò trong đề tài</th>
               <th>Cấp đề tài</th>
               <th>Đánh giá loại</th>
-              <th>
+              <th class="hide-print">
                 <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
               </th>
             </tr>
@@ -40,7 +40,7 @@
               <td>{{item.role}}</td>
               <td>{{item.level}}</td>
               <td>{{item.specieObtain}}</td>
-              <td>
+              <td class="hide-print">
                 <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
                 <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
                 <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
