--- a/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
+++ b/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
@@ -15,7 +15,7 @@
           <div class="form-item-title">
             Thông tin báo cáo khoa học
           </div>
-          <div class="table-responsive">
+          <div class="table-responsive" id="seminar-print">
             <table class="table table-bordered">
               <thead>
               <tr>
@@ -27,7 +27,7 @@
                 <th>Số tác giả</th>
                 <th>Đồng tác giả</th>
                 <th>Trong nước/nước ngoài</th>
-                <th>
+                <th class="hide-print">
                   <span class="action-icon" (click)="openModals('SENIMAR')"><i class="fa fa-plus"></i></span>
                 </th>
               </tr>
@@ -42,7 +42,7 @@
                 <td>{{item.numberAuthor}}</td>
                 <td>{{item.authors}}</td>
                 <td>{{item.location}}</td>
-                <td>
+                <td class="hide-print">
                   <span class="action-icon" (click)="editItem('SENIMAR',item)"><i class="fa fa-edit"></i></span>
                   <span class="action-icon" (click)="removeItem('SENIMAR',i)"><i class="fa fa-remove "></i></span>
                   <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
@@ -62,6 +62,9 @@
       <!---->
       <div class="col-xs-12">
         <div class="form-item">
+          <div class="form-item-title">
+            Thông tin bài báo
+          </div>
           <div class="action-form" style="margin-bottom: 0 !important;">
             <button (click)="onSave(1)">Ghi nhận</button>
             <div *ngIf="message.condition && mode == 1 && formValid == true "
@@ -69,7 +72,7 @@
               {{message.content}}
             </div>
           </div>
-          <div class="table-responsive">
+          <div class="table-responsive" id="newspaper-print">
             <table class="table table-bordered">
               <thead>
               <tr>
@@ -82,7 +85,7 @@
                 <th>Số tác giả</th>
                 <th>Đồng tác giả</th>
                 <th>Trong nước/nước ngoài</th>
-                <th>
+                <th class="hide-print">
                   <span class="action-icon" (click)="openModals('NEWSPAPER')"><i class="fa fa-plus"></i></span>
                 </th>
               </tr>
@@ -98,7 +101,7 @@
                 <td>{{item.numberAuthor}}</td>
                 <td>{{item.authors}}</td>
                 <td>{{item.location}}</td>
-                <td>
+                <td class="hide-print">
                   <span class="action-icon" (click)="editItem('NEWSPAPER',item)"><i class="fa fa-edit"></i></span>
                   <span class="action-icon" (click)="removeItem('NEWSPAPER',i)"><i class="fa fa-remove "></i></span>
                   <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
