--- a/src/app/personnels/manager-personnels/add-personnel/add-personnel.component.html
+++ b/src/app/personnels/manager-personnels/add-personnel/add-personnel.component.html
@@ -5,7 +5,7 @@
         Thêm mới cán bộ
       </div>
       <!--<div *ngIf="message.condition  " [ngClass]="'alert alert-'+ message.type">-->
-        <!--{{message.content}}-->
+      <!--{{message.content}}-->
       <!--</div>-->
       <div class="item-control">
         <label> Chọn đợn vị cấp 1 </label>
@@ -23,22 +23,6 @@
         <select class="form-control" required formControlName="level2">
           <option *ngFor="let item of listLevel2" [value]="item._id"> {{item.name}}</option>
         </select>
-      </div>
-
-
-
-      <div class="item-control">
-        <label>Mã cán bộ: </label>
-        <input type="text" class="form-control" required formControlName="personnelCode" #personnelCode ngModel>
-        <!--{{formData.forms.personnelCode.touched}}-->
-
-      </div>
-
-      <div class="item-control">
-        <div class="error" *ngIf="personnelCode.value.trim() == '' && formTouched">Chưa nhập mã cán bộ</div>
-        <div class="error" *ngIf="personnelCode.value.trim().length <6
-         && formTouched && personnelCode.value.trim() != ''">Mã cán bộ tối thiểu 6 kí tự
-        </div>
       </div>
 
       <div class="item-control">
@@ -115,9 +99,17 @@
       </div>
 
       <div class="action-form mgt-30 mgt-sm-50 text-center">
+
         <div *ngIf="message.condition  " [ngClass]="'alert alert-'+ message.type">
           {{message.content}}
         </div>
+
+        <div class="alert alert-success alert-dismissable" *ngIf="username">
+          <a href="javascript:void(0)" style="cursor: pointer" class="close" aria-label="close"
+             (click)="username = null">×</a>
+          Mã cán bộ được tạo là: {{username}}
+        </div>
+
         <button (click)="onSubmit()" type="submit">Thêm mới</button>
         <button (click)="resetForm(formData)">Xóa</button>
       </div>
