--- a/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.css
+++ b/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.css
@@ -1,13 +1,20 @@
-.form-control{
+.form-control {
   width: 100%;
 }
-select,input{
+
+textarea {
+  width: 100%;
+  max-width: 100%;
+  height: 150px;
+}
+
+select, input {
   float: none;
   min-width: 0;
 }
 
 @media (min-width: 768px) {
-  .form-control{
+  .form-control {
     width: 70%;
     float: right;
   }
