--- a/src/app/personnels/manager-system/role-manager/role-manager.component.html
+++ b/src/app/personnels/manager-system/role-manager/role-manager.component.html
@@ -1,4 +1,8 @@
 <h4 class="text-center mgb-15" style="font-size: 20px"> Danh sách quyền </h4>
+<div *ngIf="message.condition"
+     [ngClass]="'alert alert-'+ message.type">
+  {{message.content}}
+</div>
 <div class="table-responsive">
   <table class="table table-bordered">
     <thead>
@@ -90,7 +94,10 @@
       <button (click)="closeModal(modalCreate)">Thoát</button>
     </div>
     <h3 class="text-center">{{update?'Cập nhật quyền':'Tạo mới quyền'}}</h3>
-
+    <div *ngIf="message.condition"
+         [ngClass]="'alert alert-'+ message.type">
+      {{message.content}}
+    </div>
   </modal-header>
 
 
@@ -99,7 +106,21 @@
       <div class="col-xs-12 mgb-20">
         <h5 class="mgb-10">Tên quyền </h5>
         <input type="text" name="title" class="form-control" [(ngModel)]="title" placeholder="Tên quyền ">
+        <div class="error fs-i-14" *ngIf="formTouch && title.toString().trim() == ''">Chưa nhập tên quyền</div>
       </div>
+      <div class="col-xs-12 mgb-20">
+        <h5 class="mgb-10">Mô tả </h5>
+        <textarea rows="5" name="description" class="form-control" [(ngModel)]="description" placeholder="Mô tả "></textarea>
+        <div class="error fs-i-14" *ngIf="formTouch && description.toString().trim() == ''">Chưa nhập mô tả</div>
+      </div>
+
+
+      <div class="col-xs-12 mgb-20">
+        <h5 class="mgb-10">Lí do </h5>
+        <textarea rows="5" name="reason" class="form-control" [(ngModel)]="reason" placeholder="lí do "></textarea>
+        <div class="error fs-i-14" *ngIf="formTouch && reason.toString().trim() == ''">Chưa nhập lí do</div>
+      </div>
+
       <div class="col-xs-12 col-sm-6">
         <div style=" margin-bottom: 20px;">
           <h5 class="mgb-10">Chọn frontends </h5>
