--- a/src/styles.css
+++ b/src/styles.css
@@ -41,17 +41,20 @@ label.img-ul-upload.img-ul-button {
 
 textarea {
   max-width: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
-.dx-group-panel-message{
+.dx-group-panel-message {
   font-size: 18px;
   color: #fff !important;
 }
-tbody tr td{
+
+tbody tr td {
   word-break: normal;
 }
 
-.dx-group-panel-message{
+.dx-group-panel-message {
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -60,16 +63,14 @@ tbody tr td{
   text-align: center;
 }
 
-
 @media (max-width: 992px) {
-  .dx-group-panel-message{
+  .dx-group-panel-message {
     width: 992px;
   }
 }
 
-
 @media (max-width: 768px) {
-  .dx-group-panel-message{
+  .dx-group-panel-message {
     width: auto;
   }
 }
